<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.theogiraudet</groupId>
    <artifactId>test</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <emf-version>2.29.0</emf-version>
        <emf-common-version>2.27.0</emf-common-version>
        <emf-codegen-version>2.32.0</emf-codegen-version>
        <xtext-version>2.29.0</xtext-version>
        <ecore-xtext-version>1.6.0</ecore-xtext-version>
        <ecore-xcore-version>1.23.0</ecore-xcore-version>
        <ecore-xcore-lib-version>1.6.0</ecore-xcore-lib-version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.14.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>2.14.0</version>
        </dependency>

        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-core</artifactId>
            <version>3.24.8</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.19.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.19.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.19.0</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.emfatic</groupId>
            <artifactId>org.eclipse.emfatic.core</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.common</artifactId>
            <version>${emf-common-version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.ecore</artifactId>
            <version>${emf-version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.ecore.xcore.lib</artifactId>
            <version>${ecore-xcore-lib-version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.xtext</groupId>
            <artifactId>org.eclipse.xtext.xbase.lib</artifactId>
            <version>${xtext-version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.epsilon</groupId>
            <artifactId>org.eclipse.epsilon.eol.engine</artifactId>
            <version>2.4.0</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.epsilon</groupId>
            <artifactId>org.eclipse.epsilon.etl.engine</artifactId>
            <version>2.4.0</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.epsilon</groupId>
            <artifactId>org.eclipse.epsilon.emc.emf</artifactId>
            <version>2.4.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.codegen</artifactId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.codegen.ecore</artifactId>
            <version>2.20.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.6.1</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>src/main/java-gen</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${basedir}/src/main/java-gen</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
            <groupId>org.eclipse.xtext</groupId>
            <artifactId>xtext-maven-plugin</artifactId>
            <version>${xtext-version}</version>
            <executions>
                <execution>
                    <phase>generate-sources</phase>
                    <goals>
                        <goal>generate</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <languages>
                    <language>
                        <setup>org.eclipse.xtext.ecore.EcoreSupport</setup>
                    </language>
                    <language>
                        <setup>org.eclipse.emf.codegen.ecore.xtext.GenModelSupport</setup>
                    </language>
                    <language>
                        <setup>org.eclipse.emf.ecore.xcore.XcoreStandaloneSetup</setup>
                        <outputConfigurations>
                            <outputConfiguration>
                                <outputDirectory>${basedir}/src/main/java-gen</outputDirectory>
                            </outputConfiguration>
                        </outputConfigurations>
                    </language>
                </languages>
                <sourceRoots>
                    <root>${basedir}/src/main/resources</root>
                </sourceRoots>
            </configuration>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.text</artifactId>
                    <version>3.6.100</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.core.resources</artifactId>
                    <version>3.18.0</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.xtext</groupId>
                    <artifactId>org.eclipse.xtext.ecore</artifactId>
                    <version>${xtext-version}</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.xtext</groupId>
                    <artifactId>org.eclipse.xtext.generator</artifactId>
                    <version>${xtext-version}</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.xtext</groupId>
                    <artifactId>org.eclipse.xtext.builder.standalone</artifactId>
                    <version>${xtext-version}</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.emf</groupId>
                    <artifactId>org.eclipse.emf.codegen.ecore.xtext</artifactId>
                    <version>${ecore-xtext-version}</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.emf</groupId>
                    <artifactId>org.eclipse.emf.common</artifactId>
                    <version>${emf-common-version}</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.emf</groupId>
                    <artifactId>org.eclipse.emf.ecore</artifactId>
                    <version>${emf-version}</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.emf</groupId>
                    <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
                    <version>2.17.0</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.emf</groupId>
                    <artifactId>org.eclipse.emf.codegen</artifactId>
                    <version>2.22.0</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.emf</groupId>
                    <artifactId>org.eclipse.emf.codegen.ecore</artifactId>
                    <version>2.32.0</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.emf</groupId>
                    <artifactId>org.eclipse.emf.ecore.xcore</artifactId>
                    <version>1.23.0</version>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.emf</groupId>
                    <artifactId>org.eclipse.emf.ecore.xcore.lib</artifactId>
                    <version>${ecore-xcore-lib-version}</version>
                </dependency>
            </dependencies>
            </plugin>
        </plugins>
    </build>

</project>